--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,3 +14,18 @@ jobs:
               run: npm ci
             - name: Run Test
               run: npm test
+    Deploy:
+        runs-on: ubuntu-latest
+        steps:
+            - name: Get code
+              uses: actions/checkout@v3
+            - name: Install NodeJS
+              uses: actions/setup-node@v3
+              with:
+                node-version: 18
+            - name: Install dependencies
+              run: npm ci
+            - name: Build proyect
+              run: npm run build
+            - name: Deploy
+              run: echo "deploying"
